--- a/src/app/components/retroboard/retroboard.component.scss
+++ b/src/app/components/retroboard/retroboard.component.scss
@@ -1,7 +1,6 @@
 .retroboard {
   padding: 16px;
-  height: 100%;
-  overflow: auto;
+  min-height: 100%;
 
   &__columns {
     display: flex;
