--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -19,16 +19,8 @@
   &__header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-bottom: 16px;
-  }
-
-  &__logo {
-    font-weight: 800;
-    font-size: 15px;
-    color: var(--mdc-theme-primary, #a78bfa);
-    letter-spacing: -0.5px;
-    white-space: nowrap;
   }
 
   &__section-label {
@@ -77,7 +69,7 @@
   }
 
   &__actions {
-    margin-top: auto;
+    margin-top: 16px;
     padding-top: 8px;
 
     mat-divider {
